--- a/YURT-OTOMASYONU/Web.config
+++ b/YURT-OTOMASYONU/Web.config
@@ -17,6 +17,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	  <authentication mode="Forms">
+		  <forms loginUrl="Login/Login" timeout="30" slidingExpiration="true" />
+	  </authentication>
   </system.web>
 	<connectionStrings>
 		<add name="YurtOtomasyonEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=YurtOtomasyon;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
