--- a/YURT-OTOMASYONU.Data/YURT-OTOMASYONU.Data.csproj
+++ b/YURT-OTOMASYONU.Data/YURT-OTOMASYONU.Data.csproj
@@ -50,10 +50,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dolap.cs">
+    <Compile Include="Envanter.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Masa.cs">
+    <Compile Include="Izinler.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Model1.Context.cs">
@@ -74,6 +74,9 @@
     <Compile Include="Oda.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Odemeler.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Ogrenci.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -81,10 +84,10 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="sysdiagrams.cs">
+    <Compile Include="Yardımlar.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Yatak.cs">
+    <Compile Include="YemekListesi.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
   </ItemGroup>
