--- a/YURT_OTOMASYONU.ViewModels/YURT_OTOMASYONU.ViewModels.csproj
+++ b/YURT_OTOMASYONU.ViewModels/YURT_OTOMASYONU.ViewModels.csproj
@@ -44,11 +44,12 @@
     <Compile Include="Personel\PersonelViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\LoginViewModel.cs" />
+    <Compile Include="Student\PermissionViewModel.cs" />
     <Compile Include="Student\StudentViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\YURT-OTOMASYONU.Data\YURT-OTOMASYONU.Data.csproj">
-      <Project>{3399B867-132E-4525-B58B-270C1AA66DF0}</Project>
+      <Project>{3399b867-132e-4525-b58b-270c1aa66df0}</Project>
       <Name>YURT-OTOMASYONU.Data</Name>
     </ProjectReference>
   </ItemGroup>
