Ödeme Yapma Backend Tamamlandı #24

--- a/YURT-OTOMASYONU/YURT-OTOMASYONU.csproj
+++ b/YURT-OTOMASYONU/YURT-OTOMASYONU.csproj
@@ -203,6 +203,8 @@
     <Content Include="Views\FoodList\Index.cshtml" />
     <Content Include="Views\Personel\AddFood.cshtml" />
     <Content Include="Views\Student\_Permission.cshtml" />
+    <Content Include="Views\Student\_Payment.cshtml" />
+    <Content Include="Views\Login\PersonelLogin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
