--- a/YURT-OTOMASYONU/YURT-OTOMASYONU.csproj
+++ b/YURT-OTOMASYONU/YURT-OTOMASYONU.csproj
@@ -205,6 +205,7 @@
     <Content Include="Views\Login\PersonelLogin.cshtml" />
     <Content Include="Views\Student\Profile.cshtml" />
     <Content Include="Views\Student\_CallHelp.cshtml" />
+    <Content Include="Views\Student\_EditPassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
