--- a/YURT_OTOMASYONU.ViewModels/YURT_OTOMASYONU.ViewModels.csproj
+++ b/YURT_OTOMASYONU.ViewModels/YURT_OTOMASYONU.ViewModels.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\LoginViewModel.cs" />
     <Compile Include="Student\CallHelpViewModel.cs" />
+    <Compile Include="Student\EditPasswordViewModel.cs" />
     <Compile Include="Student\PaymentViewModel.cs" />
     <Compile Include="Student\PermissionViewModel.cs" />
     <Compile Include="Student\StudentViewModel.cs" />
