--- a/YURT-OTOMASYONU/packages.config
+++ b/YURT-OTOMASYONU/packages.config
@@ -14,5 +14,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="System.Web.Http.Common" version="4.0.20126.16343" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
