--- a/YURT-OTOMASYONU.Data/YURT-OTOMASYONU.Data.csproj
+++ b/YURT-OTOMASYONU.Data/YURT-OTOMASYONU.Data.csproj
@@ -54,6 +54,9 @@
     <Compile Include="Envanter.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="EnvanterListesi.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Izinler.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -85,6 +88,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sysdiagrams.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Yardımlar.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
