İzin İsteyenler Listesi Modal Tasarımı Tamamlandı  #47

--- a/YURT-OTOMASYONU/YURT-OTOMASYONU.csproj
+++ b/YURT-OTOMASYONU/YURT-OTOMASYONU.csproj
@@ -209,6 +209,7 @@
     <Content Include="Views\Student\_CallHelp.cshtml" />
     <Content Include="Views\Student\_EditPassword.cshtml" />
     <Content Include="Views\Personel\_CallHelp.cshtml" />
+    <Content Include="Views\Personel\_Permission.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
