Ödemeler Modal Buton Tasarımı Tamamlandı #50

--- a/YURT-OTOMASYONU/YURT-OTOMASYONU.csproj
+++ b/YURT-OTOMASYONU/YURT-OTOMASYONU.csproj
@@ -210,6 +210,7 @@
     <Content Include="Views\Student\_EditPassword.cshtml" />
     <Content Include="Views\Personel\_CallHelp.cshtml" />
     <Content Include="Views\Personel\_Permission.cshtml" />
+    <Content Include="Views\Personel\_Payment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
