--- a/YURT_OTOMASYONU.ViewModels/YURT_OTOMASYONU.ViewModels.csproj
+++ b/YURT_OTOMASYONU.ViewModels/YURT_OTOMASYONU.ViewModels.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Personel\StudentAddViewModel.cs" />
     <Compile Include="Personel\PersonelViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\LoginViewModel.cs" />
