--- a/YURT-OTOMASYONU/YURT-OTOMASYONU.csproj
+++ b/YURT-OTOMASYONU/YURT-OTOMASYONU.csproj
@@ -213,6 +213,7 @@
     <Content Include="Views\Personel\_Payment.cshtml" />
     <Content Include="Views\Personel\_NoPayment.cshtml" />
     <Content Include="Views\Personel\_AddStudent.cshtml" />
+    <Content Include="Views\Personel\_PermissionDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
