--- a/YURT-OTOMASYONU/YURT-OTOMASYONU.csproj
+++ b/YURT-OTOMASYONU/YURT-OTOMASYONU.csproj
@@ -215,6 +215,7 @@
     <Content Include="Views\Personel\_AddStudent.cshtml" />
     <Content Include="Views\Personel\_PermissionDetail.cshtml" />
     <Content Include="Views\Student\_DayFood.cshtml" />
+    <Content Include="Views\Personel\_EditStudent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
